--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/jeffhtli/react-native-common-layout/issues"
   },
-  "homepage": "https://github.com/jeffhtli/react-native-common-layout#readme"
+  "homepage": "https://github.com/jeffhtli/react-native-common-layout#readme",
+  "peerDependencies": {
+    "prop-types": "^15.6.1",
+    "react": "^16.3.0",
+    "react-native": "^0.54.4"
+  }
 }
